fix bug 147995: Difficulty finding trash folder when using an IMAP server directory Patch By Henry.Jia@sun.com r=naving, sr=bienvenu